--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "can-component": "^4.0.0-pre.28",
     "can-stache": "^4.0.0-pre.53",
     "jshint": "^2.9.1",
-    "steal": "2.0.0",
+    "steal": "^2.0.0",
     "steal-qunit": "^2.0.0",
     "steal-tools": "^2.0.0",
     "testee": "^0.9.0"
